fix: Add support for button align option in Safari < 11.0 (BDS-348)

--- a/packages/components/bolt-button/src/button.scss
+++ b/packages/components/bolt-button/src/button.scss
@@ -156,22 +156,32 @@ bolt-button[width='full@small'],
 
 
 /** Button Alignments **/
+.c-bolt-button__inner-wrapper {
+  width: 100%;
+}
+
 .c-bolt-button--center {
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  .c-bolt-button__inner-wrapper {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 }
 
 .c-bolt-button--left {
-  align-items: flex-start;
-  justify-content: flex-start;
-  text-align: left;
+  .c-bolt-button__inner-wrapper {
+    align-items: flex-start;
+    justify-content: flex-start;
+    text-align: left;
+  }
 }
 
 .c-bolt-button--right {
-  align-items: flex-end;
-  justify-content: flex-end;
-  text-align: right;
+  .c-bolt-button__inner-wrapper {
+    align-items: flex-end;
+    justify-content: flex-end;
+    text-align: right;
+  }
 }
 
 
